--- a/templates/main.html
+++ b/templates/main.html
@@ -6,11 +6,12 @@
 <body>
     <div class = "container">
         <h2>Main</h2>
-        <form action = "/" method = "post">
-            <p><input type = "submit" value="genAI"></p>
-        </form>
+
         <form action = "/SA" method = "post">
             <p><input type = "submit" value="Sentiment Analysis"></p>
+        </form>
+        <form action = "/genAI" method = "post">
+            <p><input type = "submit" value="genAI"></p>
         </form>
         <form action = "/" method = "post">
             <p><input type = "submit" value="End"></p>
