--- a/templates/main.html
+++ b/templates/main.html
@@ -10,6 +10,10 @@
         <form action = "/SA" method = "post">
             <p><input type = "submit" value="Sentiment Analysis"></p>
         </form>
+        <form action = "/paynow" method = "post">
+            <p><input type = "submit" value="Transfer Money"></p>
+        </form>
+
         <form action = "/genAI" method = "post">
             <p><input type = "submit" value="genAI"></p>
         </form>
